# File_encrypter

./: CMakeLists.txt  PFile.cpp  PFile.h  README.md  base64.hpp  build.bat  encrypt.cpp
encrypt/: CMakeLists.txt  build.bat  encrypt.cpp
encrypt/includes/: CMakeLists.txt  PFile.cpp  PFile.h  PIO.hpp
encrypt/quote/: CMakeLists.txt  base64.hpp
encrypter_ui/: Mainwindow.Designer.cs  Mainwindow.cs  Mainwindow.resx  Program.cs  encrypter_ui.csproj  encrypter_ui.sln  packages.config
encrypter_ui/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
includes/: PFile.cpp  PFile.h
quote/: base64.hpp
